--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Blockchain Demo</title>
 
   <base href="/" />
 
@@ -15,6 +15,7 @@
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="Blockchain Demo">
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
